{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 3518,
  "lineage": "cdb80630-8bf2-10c7-251d-7b1fab51d5df",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026f33d38b6410e30",
            "arn": "arn:aws:ec2:ap-south-1:328884867008:instance/i-0ad540861ada3cf74",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad540861ada3cf74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s-cluster-vm-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4b665745ac96d5d",
            "private_dns": "ip-10-0-2-155.ap-south-1.compute.internal",
            "private_ip": "10.0.2.155",
            "public_ip": "15.206.147.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06913384e1ca7e986",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b027d9102918b23",
            "tags": {
              "Name": "k8s-Master"
            },
            "tags_all": {
              "Name": "k8s-Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08136f0a59f0be7c4"
            ]
          },
          "dependencies": [
            "module.aws.aws_security_group.secure",
            "module.aws.aws_subnet.mysubnet1",
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026f33d38b6410e30",
            "arn": "arn:aws:ec2:ap-south-1:328884867008:instance/i-06d55114ea2ae0ab1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d55114ea2ae0ab1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-cluster-vm-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052c499e758ac0922",
            "private_dns": "ip-10-0-2-75.ap-south-1.compute.internal",
            "private_ip": "10.0.2.75",
            "public_ip": "3.110.208.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4618a0546296c8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b027d9102918b23",
            "tags": {
              "Name": "k8s-Slave1-aws"
            },
            "tags_all": {
              "Name": "k8s-Slave1-aws"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08136f0a59f0be7c4"
            ]
          },
          "dependencies": [
            "module.aws.aws_security_group.secure",
            "module.aws.aws_subnet.mysubnet1",
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328884867008:internet-gateway/igw-04e57280786124271",
            "id": "igw-04e57280786124271",
            "owner_id": "328884867008",
            "tags": {
              "Name": "K8s-igw"
            },
            "tags_all": {
              "Name": "K8s-igw"
            },
            "vpc_id": "vpc-0f6d62f56861ea3e0"
          },
          "dependencies": [
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328884867008:route-table/rtb-037323ad29d8db493",
            "id": "rtb-037323ad29d8db493",
            "owner_id": "328884867008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e57280786124271",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom-route-table"
            },
            "tags_all": {
              "Name": "Custom-route-table"
            },
            "vpc_id": "vpc-0f6d62f56861ea3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.myigw",
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b95d15607ff32891",
            "route_table_id": "rtb-037323ad29d8db493",
            "subnet_id": "subnet-01b027d9102918b23"
          },
          "dependencies": [
            "module.aws.aws_internet_gateway.myigw",
            "module.aws.aws_route_table.rtable",
            "module.aws.aws_subnet.mysubnet1",
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328884867008:security-group/sg-08136f0a59f0be7c4",
            "description": "Allow HTTP, SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08136f0a59f0be7c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secure",
            "name_prefix": "",
            "owner_id": "328884867008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-wizard"
            },
            "tags_all": {
              "Name": "security-wizard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d62f56861ea3e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328884867008:subnet/subnet-01b027d9102918b23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01b027d9102918b23",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328884867008",
            "tags": {
              "Name": "subnet1_mnkc_project"
            },
            "tags_all": {
              "Name": "subnet1_mnkc_project"
            },
            "vpc_id": "vpc-0f6d62f56861ea3e0"
          },
          "dependencies": [
            "module.aws.aws_vpc.myvpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].myaws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328884867008:vpc/vpc-0f6d62f56861ea3e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093bdd36f2949956a",
            "default_route_table_id": "rtb-0728af0c8d6900c83",
            "default_security_group_id": "sg-0663ee9c499497efd",
            "dhcp_options_id": "dopt-1a946f71",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f6d62f56861ea3e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0728af0c8d6900c83",
            "owner_id": "328884867008",
            "tags": {
              "Name": "aws_vpc_mnkc_project"
            },
            "tags_all": {
              "Name": "aws_vpc_mnkc_project"
            }
          },
          "dependencies": [
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkInterfaces/slave1-nic",
            "internal_domain_name_suffix": "zdjsiuuwniauri23syhwlezodc.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/virtualNetworks/vpc/subnets/subnet1"
              }
            ],
            "location": "centralindia",
            "name": "slave1-nic",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "mnkc_rg"
          },
          "dependencies": [
            "module.azure.azurerm_public_ip.vm_pubip",
            "module.azure.azurerm_resource_group.myrg",
            "module.azure.azurerm_subnet.vm_subnet",
            "module.azure.azurerm_virtual_network.vpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard",
            "location": "centralindia",
            "name": "security_wizard",
            "resource_group_name": "mnkc_rg",
            "security_rule": [],
            "tags": {
              "Name": "security_wizard"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "security_wizard",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "security_wizard",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/k8s-1",
            "name": "k8s-1",
            "network_security_group_name": "security_wizard",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "6443",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/k8s-2",
            "name": "k8s-2",
            "network_security_group_name": "security_wizard",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/ping",
            "name": "ping",
            "network_security_group_name": "security_wizard",
            "priority": 104,
            "protocol": "Icmp",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/networkSecurityGroups/security_wizard/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "security_wizard",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mnkc_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.vm_sg",
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure_pubip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/publicIPAddresses/publicIPforVPN",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.14.188",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "publicIPforVPN",
            "resource_group_name": "mnkc_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "mnkc_rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Name": "slavevm-ip"
            }
          },
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/virtualNetworks/vpc/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "mnkc_rg",
            "virtual_network_name": "vpc"
          },
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg",
            "module.azure.azurerm_virtual_network.vpc",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "5224d3c8-6a96-4801-a39d-960f65932e1a",
            "id": "/subscriptions/6c8c8a7b-6023-4b39-8f24-f8aa195e268b/resourceGroups/mnkc_rg/providers/Microsoft.Network/virtualNetworks/vpc",
            "location": "centralindia",
            "name": "vpc",
            "resource_group_name": "mnkc_rg",
            "tags": {
              "Name": "vpc_mnkc"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg",
            "module.cluster_key.local_file.privatekey",
            "module.cluster_key.tls_private_key.keypair"
          ]
        }
      ]
    }
  ]
}